# orthologic-coq

./: CHANGES.md  Dockerfile  LICENSE  Makefile  Makefile.conf  OL_Bench.v  OL_Reflection.v  OL_Reflection_1_base.v  OL_Reflection_2_memo.v  OL_Reflection_3_fmap.v  OL_Reflection_4_pointer.v  OL_Reflection_4_pointers.v  OL_Tests.v  OL_Theory.v  OL_bench.txt  README.md  _CoqProject  dune-project  my-plugin.opam  ol-coq.opam  orthologic-coq.opam  plot.py
bench.2024-09-18-do=1-slow=16/: test02.bench  test04.bench  test06.bench  test08.bench  test10.bench  test12.bench  test14.bench  test16.bench  test18.bench  test20.bench  test22.bench  test24.bench  test26.bench  test28.bench  test30.bench  test32.bench  test34.bench  test36.bench  test38.bench  test40.bench  test42.bench  test44.bench  test46.bench  test48.bench  test50.bench  test52.bench  test54.bench  test56.bench  test58.bench  test60.bench
bench.2024-09-18-do=10-slow=20-top=100/: test002.bench  test004.bench  test006.bench  test008.bench  test010.bench  test012.bench  test014.bench  test016.bench  test018.bench  test02.bench  test020.bench  test022.bench  test024.bench  test026.bench  test028.bench  test030.bench  test032.bench  test034.bench  test036.bench  test038.bench  test040.bench  test042.bench  test044.bench  test046.bench  test048.bench  test050.bench  test052.bench  test054.bench  test056.bench  test058.bench  test06.bench  test060.bench  test062.bench  test064.bench  test066.bench  test068.bench  test070.bench  test072.bench  test074.bench  test076.bench  (+16 more)
bench.2024-09-18-do=2-slow=20-top=100/: test002.bench  test004.bench  test006.bench  test008.bench  test010.bench  test012.bench  test014.bench  test016.bench  test018.bench  test02.bench  test020.bench  test022.bench  test024.bench  test026.bench  test028.bench  test030.bench  test032.bench  test034.bench  test036.bench  test038.bench  test04.bench  test040.bench  (+36 more)
src/: ce_syntax.mlg  dune  ol.ml
theories/: Example.v  OLPlugin.v  OL_Bench.v  OL_Reflection_1_base_v2.v  OL_Reflection_3_memo.v  OL_Reflection_4_fmap.v  OL_Reflection_5_pointers.v  OL_Theory.v  Test.v  Tutorial.v  dune
theories/olsolve_bench/: test002.v  test004.v  test016.v  test022.v  test026.v  test034.v  test052.v  test062.v  test066.v  test070.v  test078.v  test082.v  test084.v  test090.v  test100.v
theories/oltauto_bench/: test_tauto004_0.v  test_tauto006_0.v  test_tauto008_1.v  test_tauto008_2.v  test_tauto008_3.v  test_tauto010_3.v  test_tauto012_1.v  test_tauto014_1.v  test_tauto016_1.v  test_tauto016_3.v
(+376 files in other folders)
