(library
 (name OLCoq)                   ; This is the name you will use in
                                    ; Coq's `Declare ML Module`, and
                                    ; the name of the main OCaml
                                    ; module of your plugin.

 (public_name ol-coq.plugin) ; This makes the plugin
                                    ; installable; recommended, must
                                    ; match opam package name.

 (synopsis "Coq Plugin of Orthologic reasoning")         ; Synopsis, used in META generation.

 (flags :standard -w -27)           ; CoqPP generated code requires to
                                    ; disable warning 27 often.



 (libraries                         ; OCaml libraries we want to link with
   coq-core.vernac                  ; Needed for vernac extend.
   coq-core.plugins.ltac            ; Needed for tactic extend.
 )
)

; This will let Dune know about Coq's .mlg grammar files.
(coq.pp (modules ce_syntax))
